namespace lab_3;

public class Disk : Directory
{
    public Disk() : base()
    {
    }

    public Disk(string name, int level = 0) : base(name, level)
    {
    }
}
