namespace lab_3;

public class Folder : Directory
{
    public Folder() : base()
    {
    }

    public Folder(string name, int level = 0) : base(name, level)
    {
    }
}
